--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@
 body {
     font-size: 1rem;
     font-family: 'Montserrat';
+
+    /* AQUI: fundo roxo degradê vertical suave */
+    background: linear-gradient(to bottom, #b48aff, #8f5aff);
 }
 
 header {
